plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '7.2.1'
}

group = 'backend'
description = 'Backend for Sanaboksi project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.hibernate.orm:hibernate-community-dialects'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.xerial:sqlite-jdbc'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.hibernate.orm:hibernate-community-dialects'
	testRuntimeOnly 'org.xerial:sqlite-jdbc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.register('unitTest', Test) {
	group = 'verification'
	description = 'Runs only unit tests.'

	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath

	useJUnitPlatform {
        includeTags 'unitTest'
    }
}

tasks.register('integrationTest', Test) {
    group = 'verification'
    description = 'Runs only integration tests.'

    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath

    systemProperty 'spring.profiles.active', 'test'

    useJUnitPlatform {
        includeTags 'integrationTest'
    }
}

spotless {
	java {
        googleJavaFormat('1.28.0')
        target 'src/**/*.java'
        endWithNewline()
        lineEndings = 'UNIX'
    }
}